# dojo-blackboard

./: .gitignore  .gitignore.orig  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  ReadMe.md  key-config.toml.example  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
code-reviews/: README.md
docs/: process.md  secrets.md
src/bboard/: database.py  greeting.py  main.py
src/bboard/assets/: timer_countdown.html
src/bboard/demo/: clock_display.py
src/bboard/models/: article.py  headline.py  iss_position.py  vehicle_journey.py
src/bboard/newsfeed/: headlines.py  sources.py
src/bboard/scrape/: football.py
src/bboard/sloc/: sloc.py
src/bboard/transit/: clock_pub.py  clock_sub.py  iss.py  vehicle_map.py  vehicles.py
src/bboard/util/: cache_buster.py  credential_env_vars.py  credentials.py  database.py  fs.py  lifespan_mgmt.py  requests.py  testing.py  web.py
src/beeware-tutorial/helloworld/: CHANGELOG  LICENSE  pyproject.toml
src/challenge/find_modes/: ReadMe.md  counting.py  find_modes_test.py  sorting.py  timed.py
src/challenge/ladder/: anagram.py  lexicon.py  scrape.py  word_ladder.py  word_ladder_test.py
src/challenge/long_ladder/: long_ladder.py  long_ladder_test.py
src/challenge/pyman/: pacman.py
src/challenge/twitter/: schema.py  twitter_pete.py  twitter_pete_test.py  twitter_peter.py  twitter_table.py  twitter_table_test.py  twitter_test.py  workload.py
src/challenge/two_sum/: find_two_sum.py  find_two_sum_test.py
src/connections/: conn_util.py  connections.txt  generate.py  long_word.py  long_word_create.py  nyt_connections.py  store_prompts.py  wiki_table.py
src/constraint/: paragraph_fill.py
src/count/: bisect.py  cloc.py  sloc.py
src/count/tests/: median_test.py  sloc_html_test.py  sloc_test.py
src/custom_dict/: counting_dict.py  counting_dict_test.py  tracking_dict.py  tracking_dict_test.py
src/motion/: find_motion.py  highlights.py  motion.py
src/rate_limit/lua/: redis_token_bucket.lua
src/rate_limit/src/: Cargo.toml  admin.rs  main.rs  rate_limit.rs  token_bucket.lua
src/recursion/: Makefile  count.py  factorial.scm  hanoi.py  show_timings.py
src/tracking_dict/: tracking_dict.py  tracking_dict_test.py
talks/: 2024-09-17-culture.md  2024-09-24-culture.md  2024-09-24-trip-report.md  2024-10-15-sloc.md  2024-10-22-sloc.md  2024-10-29-sloc.md  2024-11-12-sloc.md  2025-05-16-nameservice.md  2025-07-08-connections.md  2025-09-30-recursion.md  2025-10-28-filling.md
talks/asset/result/: cogito:14b-SC-justices.md  cogito:14b-presidents.md  cogito:14b-related-word-pairs.md  cogito:14b-river-crossing.md  cogito:14b-strawberry.md  deepseek-coder-v2-SC-justices.md  deepseek-coder-v2-presidents.md  deepseek-coder-v2-related-word-pairs.md  deepseek-coder-v2-river-crossing.md  deepseek-coder-v2-strawberry.md  deepseek-r1:14b-SC-justices.md  devstral-SC-justices.md  gemma3.sh  gemma3:12b-SC-justices.md  gemma3:12b-presidents.md  gemma3:12b-related-word-pairs.md  gemma3:12b-river-crossing.md  grab_tables.sh  (+19 more)
tests/: cache_buster_test.py  clock_display_test.py  credentials_test.py  database_test.py  foo_test.py  greeting_test.py  headlines_test.py  iss_test.py  requests_test.py  vehicles_test.py  web_test.py
tests/connections/: long_word_test.py
(+8 files in other folders)
