
[project]
name = "dojo-blackboard"
requires-python = ">=3.9"
license = "MIT"

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"

[tool.ruff]
line-length = 120
