
[project]
name = "dojo-blackboard"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[tool.black]
line-length = 100

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.pyright]
# typeCheckingMode = "strict"
# reportUninitializedInstanceVariable = true
# reportUnknownVariableType = true
# reportUnknownArgumentType = true
reportMissingTypeStubs = false

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = ["E4", "E7", "E9", "A", "B", "C", "DTZ", "F", "Q"]
