
[project]
name = "dojo-blackboard"
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[tool.black]
line-length = 100

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def main\\(",
]

[tool.isort]
float_to_top =            true
include_trailing_comma =  true
multi_line_output =       "VERTICAL_HANGING_INDENT"
line_length =             100

[tool.mypy]
exclude = "^.*/build/"

[tool.pyright]
# typeCheckingMode = "strict"
# reportUninitializedInstanceVariable = true
# reportUnknownVariableType = true
# reportUnknownArgumentType = true
reportMissingTypeStubs = false
exclude = [
    "**/build/",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
# 1. Enable flake8-bugbear (`B`) rules, in addition to the defaults.
select = [
    "E4", "E7", "E9", "A", "ANN", "ARG", "ASYNC", "B", "BLE", "C", "C4", "C90", "COM",
    "D", "DTZ", "E", "EM", "EXE", "F", "FBT", "FIX", "FURB", "G", "ICN", "INT", "ISC",
    "LOG", "NPY", "PD", "PERF", "PIE", "PL", "PTH", "PYI", "Q", "RET", "RSE", "RUF",
    "SIM", "SLF", "SLOT", "TCH", "TID", "TRY", "UP", "W", "YTT",
]
ignore = [
    "ANN101",
    "ANN401",
    "COM812",
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D107",
    "D200",
    "D205",
    "D211",
    "D212",
    "D213",
    "D401",
    "D404",
    "ICN001",
    "PD901",
    "PLR2004",
    "PTH123",
    "RUF006",
    "SIM300",
]
