
[package]
name = "rl-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
axum = "0.7"
hyper = { version = "0.14", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
deadpool-redis = "0.11"
redis = { version = "0.23", features = ["tokio-comp"] }
valkey = "0.6"
once_cell = "1.19"
time = "0.3"
